# serializer version: 1
# name: test_converation_record
  '''
  <|start_header_id|>system<|end_header_id|>


  You are a helpful assistant.

  You are a helpful assistant with tool calling capabilities. When you receive a tool call response, use the output to format an answer to the orginal use question.<|eot_id|><|start_header_id|>user<|end_header_id|>

  Given the following functions, please respond with a JSON for a function call with its proper arguments that best answers the given prompt.

  Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}. Do not use variables.

  {
      "type": "function",
      "function": {
          "name": "get_current_conditions",
          "description": "Get the current weather conditions for a specific location",
          "parameters": {
              "location": {
                  "type": "string"
              }
          }
      }
  }

  What is the weather like today in SF?<|eot_id|><|start_header_id|>assistant<|end_header_id|>

  I will call a weather tool
  '''
# ---
# name: test_conversation
  '''
  <|start_header_id|>system<|end_header_id|>


  You are a helpful assistant.<|eot_id|><|start_header_id|>user<|end_header_id|>

  What is the capital of France?<|eot_id|><|start_header_id|>assistant<|end_header_id|>

  The capital of France is Paris.
  '''
# ---
# name: test_empty_messages
  '<|eot_id|>'
# ---
# name: test_system
  '''
  <|start_header_id|>system<|end_header_id|>


  You are a helpful assistant.<|eot_id|>
  '''
# ---
# name: test_system_tools
  '''
  <|start_header_id|>system<|end_header_id|>


  You are a helpful assistant.

  You are a helpful assistant with tool calling capabilities. When you receive a tool call response, use the output to format an answer to the orginal use question.<|eot_id|><|start_header_id|>user<|end_header_id|>

  Given the following functions, please respond with a JSON for a function call with its proper arguments that best answers the given prompt.

  Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}. Do not use variables.

  {
      "type": "function",
      "function": {
          "name": "get_current_conditions",
          "description": "Get the current weather conditions for a specific location",
          "parameters": {
              "location": {
                  "type": "string"
              }
          }
      }
  }

  What is the weather like today in SF?<|eot_id|><|start_header_id|>assistant<|end_header_id|>


  '''
# ---
# name: test_tool_call
  '''
  <|start_header_id|>system<|end_header_id|>


  You are a helpful assistant.

  You are a helpful assistant with tool calling capabilities. When you receive a tool call response, use the output to format an answer to the orginal use question.<|eot_id|><|start_header_id|>user<|end_header_id|>

  Given the following functions, please respond with a JSON for a function call with its proper arguments that best answers the given prompt.

  Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}. Do not use variables.

  {
      "type": "function",
      "function": {
          "name": "get_current_conditions",
          "description": "Get the current weather conditions for a specific location",
          "parameters": {
              "location": {
                  "type": "string"
              }
          }
      }
  }

  What is the weather like today in SF?<|eot_id|><|start_header_id|>assistant<|end_header_id|>

  <|eot_id|><|start_header_id|>ipython<|end_header_id|>

  {"output": "Clouds giving way to sun Hi: 76° Tonight: Mainly clear early, then areas of low clouds forming Lo: 56°"}<|eot_id|><|start_header_id|>assistant<|end_header_id|>


  '''
# ---
# name: test_tool_call_conversation
  '''
  <|start_header_id|>system<|end_header_id|>


  You are a helpful assistant.

  You are a helpful assistant with tool calling capabilities. When you receive a tool call response, use the output to format an answer to the orginal use question.<|eot_id|><|start_header_id|>user<|end_header_id|>

  Given the following functions, please respond with a JSON for a function call with its proper arguments that best answers the given prompt.

  Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}. Do not use variables.

  {
      "type": "function",
      "function": {
          "name": "get_current_conditions",
          "description": "Get the current weather conditions for a specific location",
          "parameters": {
              "location": {
                  "type": "string"
              }
          }
      }
  }

  What is the weather like today in SF?<|eot_id|><|start_header_id|>assistant<|end_header_id|>

  <|eot_id|><|start_header_id|>ipython<|end_header_id|>

  {"output": "Clouds giving way to sun Hi: 76° Tonight: Mainly clear early, then areas of low clouds forming Lo: 56°"}<|eot_id|><|start_header_id|>assistant<|end_header_id|>

  The weather in SF looks cloudy today.
  '''
# ---
